calcul jours ouvrables

--- a/views/conges.html
+++ b/views/conges.html
@@ -1,8 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
 
- 
-    
+
 <!-- Datatables -->
     <link href="../vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" rel="stylesheet">
     <link href="../vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" rel="stylesheet">
@@ -103,7 +102,7 @@
                  {
                     text : "Demander un congé",
                     action : function () {
-                            
+                       $("#pageInterne").load("demandeConge.html");     
                     }
                 
                  }
