--- a/views/home.html
+++ b/views/home.html
@@ -9,8 +9,6 @@
 
     <title>Plume </title>
 
-
-
     <!-- Bootstrap -->
     <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -142,9 +140,66 @@
          }
 
 
+         function loadTableauBord() {
+           $('#pageInterne').load('tableau_bord.html');
+           var pattern = 'MM-DD-YYYY hh:mm';
+           $.get("/selectnotifications", function (data) {
+             var notifications = JSON.parse(data).data;
+             notifications.reverse();
+             notifications.forEach(function (element) {
+               var date_not = element.date_notification.substring(0,16).replace("T", " ");
+               var date_time = date_not.substring(8,10)+"-"+date_not.substring(5,7)+"-"+date_not.substring(0,4) + " "+date_not.substring(11,16);
+                console.log(date_time);
+               $("#notification-liste").append(
+                       '<tr>'+
+                       '<td>'+element.sujet+'</td>'+
+                       '<td>'+element.contenu+'</td>'+
+                       '<td>'+date_time+'</td>'+
+                       '</tr>');
+             });
+
+           });
+
+
+           $.get("/vunotifications", function(data){
+             refreshNotifications();
+           });
+         }
+         function refreshNotifications() {
+           $("#menu1 .nouvelle_notification").remove();
+
+           $.get("/selectnotifications?vu=0", function (data) {
+             var jsonNotifications = JSON.parse(data).data;
+             console.log(data);
+             var nbNouvelleNotif = jsonNotifications.length;
+             if (nbNouvelleNotif == 0)  $('#number-notifications').removeClass('bg-green');
+             else $('#number-notifications').addClass('bg-green');
+             $('#number-notifications').html(nbNouvelleNotif);
+             jsonNotifications.reverse();
+             jsonNotifications.forEach(function (notification) {
+
+                 $('#menu1').prepend(' <li onclick="loadTableauBord();" class="nouvelle_notification">' +
+                         '<a>' +
+                         '<span class="image"><img src="../images/user.png" alt="Profile Image" /></span>' +
+                         '<span>' +
+                         '<span>Plume</span>' +
+                         ' </span>' +
+                         '<span class="message">' + notification.sujet + '</span>' +
+                         '</a>' +
+                         '</li>');
+
+             });
+           });
+         }
+
 
     </script>
 
+    <style type="text/css">
+      .notification_vu{
+        background-color:white;
+      }
+    </style>
   </head>
 
   <body class="nav-md">
@@ -291,61 +346,13 @@
                 <li role="presentation" class="dropdown">
                   <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
                     <i class="fa fa-envelope-o"></i>
-                    <span class="badge bg-green">6</span>
+                    <span class="badge bg-green" id="number-notifications">0</span>
                   </a>
                   <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                     <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
-                      <a>
-                        <span class="image"><img src="../images/user.png" alt="Profile Image" /></span>
-                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                      </a>
-                    </li>
-                    <li>
                       <div class="text-center">
-                        <a>
-                          <strong>See All Alerts</strong>
+                        <a onclick="loadTableauBord();" id="see-all-alerts">
+                          <strong>Mes notifications</strong>
                           <i class="fa fa-angle-right"></i>
                         </a>
                       </div>
@@ -440,27 +447,74 @@
   <script type="text/javascript">
 
     $(document).ready(function () {
-      $('.admin-view').each(function(){
-        $( this ).hide();
+      $('.admin-view').each(function () {
+        $(this).hide();
       })
-      function firstToUpperCase( str ) {
+      function firstToUpperCase(str) {
         return str.substr(0, 1).toUpperCase() + str.substr(1);
       }
 
-      $.get("/name", function(data, status){
-          var profile = JSON.parse(data);
-          $('.profile-name').each(function() {
-            $(this).html(firstToUpperCase(profile.prenom.toLowerCase()) + " " + firstToUpperCase(profile.nom.toLowerCase()));
-            //console.log(JSON.stringify(profile));
+      $.get("/name", function (data, status) {
+        var profile = JSON.parse(data);
+        $('.profile-name').each(function () {
+          $(this).html(firstToUpperCase(profile.prenom.toLowerCase()) + " " + firstToUpperCase(profile.nom.toLowerCase()));
+          //console.log(JSON.stringify(profile));
+        });
+        if (profile.admin == true) {
+          $('.admin-view').each(function () {
+            $(this).show();
           });
-          if(profile.admin == true) {
-            $('.admin-view').each(function() {
-              $(this).show();
-            });
-          }
+        }
       });
-        //alert("Data: " + data + "\nStatus: " + status);
+      //alert("Data: " + data + "\nStatus: " + status);
+      // Notification
+      refreshNotifications();
+      window.setInterval(function () {
+        refreshNotifications();
+      }, 30000);
+      var notificationsID = [];
+
+      function seeNotifications() {
+        // modifie notifacation en vu !
+        $.get("/vunotifications", function(data){
+          refreshNotifications();
+        });
+      }
+
+
+      function refreshNotifications() {
+        $("#menu1 .nouvelle_notification").remove();
+
+        $.get("/selectnotifications?vu=0", function (data) {
+          var jsonNotifications = JSON.parse(data).data;
+          console.log(data);
+          var nbNouvelleNotif = jsonNotifications.length;
+          if (nbNouvelleNotif == 0)  $('#number-notifications').removeClass('bg-green');
+          else $('#number-notifications').addClass('bg-green');
+          $('#number-notifications').html(nbNouvelleNotif);
+          jsonNotifications.reverse();
+          jsonNotifications.forEach(function (notification) {
+
+              $('#menu1').prepend(' <li onclick="loadTableauBord();" class="nouvelle_notification">' +
+                      '<a>' +
+                      '<span class="image"><img src="../images/user.png" alt="Profile Image" /></span>' +
+                      '<span>' +
+                      '<span>Plume</span>' +
+                      ' </span>' +
+                      '<span class="message">' + notification.sujet + '</span>' +
+                      '</a>' +
+                      '</li>');
+
+          });
+        });
+      }
+
+
+
+
+
     });
+
   </script>
   </body>
 </html>
